2008-04-15  Antti Koivisto  <antti@apple.com>

        Reviewed by Geoff.

        Fix <rdar://problem/5862921>
        REGRESSION: Leak in SVGSVGElement::SVGSVGElement
        
        In these strange days RefCounted starts with count of one.

        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::SVGSVGElement):
        * svg/animation/SMILTimeContainer.h:
        (WebCore::SMILTimeContainer::create):

2008-04-15  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by hyatt

        [CSS1, CSS3] Fixed the background-origin calculation for root elements
        (background-size and background-position are affected), r10794
        [CSS3] Fixed the background-size transformation where width is specified in percentage and height is left to auto

        Test: fast/backgrounds/background-origin-root-element.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calculateBackgroundSize):
        (WebCore::RenderBox::calculateBackgroundImageGeometry):

2008-04-15  Timothy Hatcher  <timothy@apple.com>

        Fixes the regression where the error and warning counts did not show up in the Resources
        sidebar next to resources.

        https://bugs.webkit.org/show_bug.cgi?id=18494

        Reviewed by Adam Roben.

        * page/inspector/ResourcesPanel.js:
        (WebInspector.ResourcesPanel.prototype.addMessageToResource): Increment errors or warnings
        on the resource. Set the bubbleText to the total of the errors and warnings. Add a error
        or warning class to the bubble.
        (WebInspector.ResourcesPanel.prototype.clearMessages): Zero out the errors and warnings
        properties on each resource. Set the bubbleText back to an empty string.
        * page/inspector/SidebarTreeElement.js:
        (WebInspector.SidebarTreeElement): Create a statusElement.
        (WebInspector.SidebarTreeElement.prototype.get bubbleText): Return _bubbleText.